--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,11 @@
 @import "base.css";
 @import "credit-card.css";
 @import "form.css";
+body {
+  background-image: url(/public/Wallpaper-\ 2560x1600.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 
 @media (max-width: 420px) {
   :root {
